--- a/Code Project/DuLichDoDay/app/src/main/res/values/strings.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="key_map"> AIzaSyBuYrVlonqcGwPvZDHLVAk7rAuM6Sr_kfw </string>
-    <string name="app_name">TravelLocation</string>
+    <string name="app_name">Du Lịch Đó Đây</string>
     <string name="title_home">Home</string>
     <string name="title_new">New</string>
     <string name="title_tour">Tour</string>
@@ -13,4 +13,18 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
